image overlap issue

--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ main {
 
 .card-e {
   top: 426px;
-  left: 214px;
+  left: 252px;
   z-index: 1;
   width: 176px;
   height: 210px;
